[package]
name = "numbers"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vob = "2.0"

[profile.release]
opt-level = 3
lto = true
target-cpu = "native"