[package]
name = "numbers"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vob = "2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
overflow-checks = false 
incremental = false
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = true
overflow-checks = false 
incremental = false
codegen-units = 1
debug = true